@@ -32,6 +32,17 @@ how they are persisted.
 Note that this is a reference implementation and, most likely, should be
 modified for your own usage.
 
+=== Installation
+
++has_ratings+ requires additional database tables to work.  You can generate
+a migration for these tables like so:
+
+  script/generate has_ratings
+
+Then simply migrate your database:
+
+  rake db:migrate
+
 === Example
 
   user = User.find(1)
