@@ -1,5 +1,6 @@
 == master
 
+* Add a generator for db migrations
 * Release gems via rake-gemcutter instead of rubyforge
 
 == 0.3.0 / 2009-04-30
